crates/hir-ty/tests/snapshots/jls_decl_warnings__rawtypes_scope_covers_signature.snap
---
source: crates/hir-ty/tests/jls_decl_warnings.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.List;

class Body {
    @SuppressWarnings("rawtypes")
    void m(List xs) {
    }
}
